Wed Sep 24 13:35:49 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/odbc/odbc.c src/tds/login.c
	- Add more ODBC2 support to SQLSetStmtAttr and 
	- change longquery support.

Tue Sep 23 20:54:59 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tds_sysdep_public.h.in:
	* src/pool/user.c src/server/login.c:
	* src/tds/login.c src/tds/mem.c:
	* src/tds/read.c src/tds/util.c:
	- fix some issues related to SOCKET declaration on windows

Tue Sep 23 13:37:28 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/odbc/odbc.c fix-ups to previous patch for SQLSetStmtAttr.

Tue Sep 23 11:29:22 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsodbc.h src/odbc/odbc.c
	- Applied patch by Frediano from ML today.
	- Adds ODBC2 support to SQLSetStmtAttr.

Tue Sep 23 01:03:12 PDT 2003	Peter Deacon <peterd@iea-software.com>
	* src/odbc/odbc.c src/tds/mem.c src/tds/query.c
	* src/tds/read.c src/tds/token.c
	- add SQL_ATTR_QUERY_TIMEOUT support on statement handle
	- check cancel return codes

Mon Sep 22 22:07:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* win32/msvc6/iconv_replacement.c(added):
	* win32/config.h win32/dev-cpp/FreeTDS.dev:
	* win32/dev-cpp/Makefile.win win32/msvc6/FreeTDS.dsp:
	* win32/msvc6/Makefile.am:
	- updated win32 compile (odbc)
	* configure.in: small update
	* include/tdsodbc.h src/odbc/convert_sql2string.c:
	- fix for MingW header bug causing error compiling
	* src/odbc/descriptor.c src/odbc/odbc_util.c:
	* src/tds/convert.c src/tds/login.c:
	- remove some warnings
	* src/tds/config.c: assure correct structure initilization
	* src/tds/query.c: fix problem with sp_prepare and mssql7

Sun Sep 21 20:34:21 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/dblib/rpc.c src/odbc/odbc.c src/pool/stream.c:
	* src/server/server.c src/server/unittest.c:
	* src/tds/query.c src/tds/token.c:
	- set always correctly column_namelen