@@ -1,3 +1,8 @@
+Wed Sep 24 21:14:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* configure.in src/odbc/Makefile.am:
+	- try to fix ODBC library use (iODBC and unixODBC should now
+	  work ok without strange configurations)
+
 Wed Sep 24 13:35:49 EDT 2003	JK Lowden <jklowden@schemamania.org>
 	* include/tds.h src/odbc/odbc.c src/tds/login.c
 	- Add more ODBC2 support to SQLSetStmtAttr and 
